tests/build/fail/widget/cannot_unset_inherited_required.stderr
error: property `margin` is required
  --> $DIR/cannot_unset_inherited_required.rs:17:18
   |
17 |         margin = unset!;
   |                  ^^^^^
